--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="bundle.css" rel="stylesheet">
   </head>
   <body>
-    <div class="curtain-viewer" data-iiif-manifest="https://vanda.github.io/curtain-viewer/public/manifest_leidencollection_sample.json"></div>
+    <div class="curtain-viewer" data-iiif-manifest="https://raw.githubusercontent.com/jpadfield/curtain-viewer/gh-pages/testcollecion.json"></div>
     <script src="js/1.08958bb6.chunk.js"></script>
     <script src="js/app.a955ee34.js"></script>
   </body>
